--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>平手 友梨奈 Tribute Page</title>
+    <title>YURINA HIRATE FANSITE</title>
     <!-- Style General -->
     <link rel="stylesheet" href="style.css" />
     <!-- Visit Her -->
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <!-- Icon Footer -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
-
+<!-- Icon -->
+<link rel="icon" href="https://s3-ap-northeast-1.amazonaws.com/pf-web/fanclubs/154/assets/237/images/icon.ico">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -62,7 +63,7 @@
 
           <h4 class="visit">VISIT HER</h4>
           <div class="sns-button">
-            <a href="https://www.youtube.com/channel/@user-qq8ps6vu5f/videos" target="_blank"><i class="fab fa-youtube"></i></a></a>
+            <a href="https://www.youtube.com/watch?v=qiLFkyEKhUQ" target="_blank"><i class="fab fa-youtube"></i></a></a>
             <span>OR</span>
             <button class="button-52" role="button"><a href="https://www.hirateyurina-official.jp/" target="_blank"> OFFICIAL SITE</a></button>
           </div>
@@ -172,13 +173,13 @@
               <li><a href="#movie">MOVIES</a></li>
               <li><a href="#mv">MUSIC VIDEO</a></li>
               <li><a href="https://news.yahoo.co.jp/articles/f1f94463fffcca724ab521b168323dde26a04b49" target="_blank">LATEST NEWS</a></li>
-              <li><a href="https://www.youtube.com/channel/@user-qq8ps6vu5f/videos" target="_blank">YOUTUBE</a></li>
+              <li><a href="https://www.youtube.com/watch?v=qiLFkyEKhUQ" target="_blank">YOUTUBE</a></li>
               <li><a href="https://www.hirateyurina-official.jp/" target="_blank">OFFICIAL SITE</a></li>
             </ul>
           </nav>
           <p>Please note : This is an unofficial website and is not affiliated official representatives. <br />All information and media found on this website is for informational purposes only</p>
 
-          <div class="disclaimer">Made with care by <a href="#">Asa</a></div>
+          <div class="disclaimer">Made with care by <a href="https://twitter.com/techiii_nd">Asa</a></div>
         </footer>
       </div>
     </div>
